--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Kontur Test</string>
     <string name="error_download">Can not download data!</string>
     <string name="try_again">Try again</string>
+    <string name="search">Поиск</string>
 </resources>
