--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Kontur Test</string>
     <string name="error_download">Can not download data!</string>
     <string name="try_again">Try again</string>
-    <string name="search">Поиск</string>
+    <string name="search">Search…</string>
+    <string name="search_hint">Name, phone…</string>
     <string name="search_content_description">This is a search icon</string>
 </resources>
